# AfucBinja

./: CMakeLists.txt  README.md  afuc.h  afuc_decode.cpp  afuc_il.cpp  afuc_regs.cpp  arch_afuc.cpp
